Version 2.1.60
    Fixed a NPE error if a LivingEntity's target was set to null
    Fixed a bug where tamed mobs could kill themselves if their owner shot them once
    Corrected a typo when naming entities summoned by COTW (Locale string - Taming.Summon.Name.Format)
    Fixed a bug where tamed mobs could have hearts instead of their name in their own death messages

Version 2.1.59
    Raised the overfishing limit from 3 to 10
    Improved the overfishing messages to be more clear about its mechanics
    Overfishing locale keys renamed "Fishing.ScarcityTip" and "Fishing.LowResourcesTip"

    NOTES: This and other exploit prevention measures are much more customizable in 2.2, which shouldn't be too far off.

Version 2.1.58
    Fixed the wrong locale string being used for Mining Double Drops

Version 2.1.57
    Fixed an incredibly rare dupe bug that only happened with VERY specific config options that was extremely difficult to pull off

Version 2.1.56
    Very large update to the zh_CN Chinese language file (thanks Dream_m)

Version 2.1.55
    Fixed a bug that could occur when adding UUIDs to old outdated DBs

Version 2.1.54
    Fixed a bug where the Skill 'Understanding the Art' was preventing vanilla experience orbs from furnaces
    Fixed 'Understanding the Art' not correctly boosting vanilla XP from furnaces

Version 2.1.53
    Fixed a critical bug where players earned too much XP

Version 2.1.52
    Updated Japanese locale (thanks snake0053)
    Added a toggle for the early game XP boost to experience.yml 'EarlyGameBoost.Enabled'
    Added a max level multiplier for determining early game boosts cutoff to experience.yml 'EarlyGameBoost.MaxLevelMultiplier'

Version 2.1.51
    You can now customize a locale outside of the JAR! (Thanks mikroskeem)
    Added a new locale reload command 'mmolocalereload' (Thanks mikroskeem)
    Locales can now be overriden by placing a file with an appropriate name inside /plugins/mcMMO/locales/ (Thanks mikroskeem)

    NOTES