@@ -3,6 +3,7 @@ Version 2.1.60
     Fixed a bug where tamed mobs could kill themselves if their owner shot them once
     Corrected a typo when naming entities summoned by COTW (Locale string - Taming.Summon.Name.Format)
     Fixed a bug where tamed mobs could have hearts instead of their name in their own death messages
+    Fixed a bug where multi-block crops would fail to double/triple drop (Sugar Cane, Cactus, etc)
 
 Version 2.1.59
     Raised the overfishing limit from 3 to 10
